# curcheck

./: .gitignore  LICENSE.md  curpage.py  cursite.py  paginator.py  pyproject.toml  readme.md  requirements.txt  setup.py  site.py
curcheck/: __init__.py  base.py  config.py  dispatcher.py  events.py  gui.py  router.py  utils.py
curcheck/errors/: base.py
curcheck/mpa/: page.py  site.py
curcheck/spa/: page.py  site.py
tests/: main_test.py  router1.py  router2.py  test_mpa.py  test_spa.py
