[tool.poetry]
name = "curcheck"
version = "1.1.4"
description = "Library for parsing SPA and MPA sites"
authors = ["BulatXam <Khamdbulat@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
pyppeteer = ">=1.0.2"
aiohttp = ">=3.8.3"
lxml = ">=4.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
